3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Documentation, no functional change.
 server/pets.c swap.c
Nicolas Weeger 2007-07-23

Remove unused return values. Fix wrong return for cure_disease. Remove hardcoded value.
 include/sproto.h
 server/disease.c
Nicolas Weeger 2007-07-17

Change function return type for coherence with experience.
 common/exp.c info.c
 include/libproto.h
Nicolas Weeger 2007-07-17

Remove obsolete color_bg handling.
 common/image.c
 lib/collect.pl.in
Nicolas Weeger 2007-07-17

No functional changes - various cleanups to reduce number of compiler warnings
when compiled with -Wall - makes it easier to catch real errors.  Most things
changed/fixed are missing returns in non void functions, missing includes,
declared but unused variables, not escaping #include sproto in CEXTRACT
checks.  MSW 2007-07-16
--
Changed files:
common/object.c common/button.c common/logger.c common/loader.l 
common/living.c common/map.c common/treasure.c common/glue.c 
include/libproto.h include/define.h include/sproto.h
plugins/cfpython/cfpython.c
plugins/cfanim/cfanim.c
random_maps/standalone.c
server/apply.c server/attack.c server/c_chat.c server/c_object.c
server/c_wiz.c server/ob_methods.c server/ob_types.c
server/shop.c server/skill_util.c server/skills.c server/time.c
socket/item.c socket/lowlevel.c socket/info.c
test/toolkit/toolkit_common.c
test/unit/random_maps/stubs_random.c test/unit/server/check_attack.c
test/unit/server/check_c_party.c test/unit/server/check_c_object.c
test/unit/server/comet_perf.c test/unit/common/check_object.c 
test/unit/common/stubs_common.c test/unit/socket/stubs_socket.c 